--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Privacy policies
-description: Privacy policy for my Android apps
+description: Privacy policies for my Android apps
 theme: minima
 plugins:
   - jekyll-feed
