changed repo to contain a developer website for Dutch Expressions

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Privacy policies
-description: Privacy policies for my Android apps
+title: Dutch Expressions
+description: Developer website for Dutch Expressions
 theme: minima
 plugins:
   - jekyll-feed
